 + New call: EnableSwitchHog(): Enable hog switching
 + New call: GetAmmo(ammoType): Returns ammo configuration (corresponds to SetAmmo)
 + New call: GetVampiric(): Returns true if vampirism is currently active
 + New call: GetLaserSight(): Returns true if laser sight (as utility) is currenctly active (ignoring sniper rifle)
 + New parameter: SetAmmoTexts: 5th param. showExtra: Set to false to hide texts like “Not yet available”
 + New parameter: ShowMission: 6th param. forceDisplay: Set to true to prevent this particular mission panel to be hidden manually by player
 + New Lua library: Achievements
 * Changed global: lfCurrentHog becomes lfCurHogCrate
 * Fixed variable: TotalRounds was -1 (instead of 0) in first real round after hog placement phase
 * AI sometimes intentionally shot hedgehogs with aihDoesntMatter set

====================== 0.9.24.1 ====================
 * Fix crash when portable portal device is fired at reduced graphics quality
 * Fix possible crash when starting Hedgewars frontend in fullscreen mode

====================== 0.9.24 ======================
Game:
 + New weapon: Minigun
 + New game modifier: Enable switch hedgehog at start of turn
 + Change weapon icons: Mudball, air mine
 + Add healing visual effect in Paramedics mode and a few scripts
 + Show remaining ammo when using Birdy egg or RC Plane bomb
 + Add separate control for team chat (default: U)
 + Add separate control for changing hedgehog tags (default: Home)
 + Toggle all hedgehog tags at once with [Precise] + [Change hedgehog tags]
 + Hedgehog tag translucency is now changed with [Switch] + [Change hedgehog tags]
 + When using flying saucer shortly after a jump, stay in-mid air
 + No longer cut off team/hedgehog names when not playing online
 * Fix possible network desynchronization and crash when players rejoin an active game
 * Fix time box being usable in Sudden Death with 0 health decrease
 * Fix chat input key being sometimes registered twice